[TAR-227] feat(resources): Adiciona as features para registrar recursos e recuperá-las pelo id
